syntax = "proto3";

package zen;

option go_package = "./proto;zen";

message User {
}

service UsersService {
    rpc HolaMundo (HolaMundoRequest) returns (HolaMundoResponse);
}

message HolaMundoRequest {
}

message HolaMundoResponse {
    string message = 1;
}
